--- a/index.html
+++ b/index.html
@@ -76,13 +76,12 @@
     <div class="w3-col m6 w3-hide-small w3-padding-large">
       <p>Chisco is a <a href="#career"><b>Computer Science; Games Engineering student</b></a>, a part-time <a href="#culture"><b>hipster</b></a>, <a href="#food"><b>home cook/pizza expert</b></a>, he has been described by some (mostly himself) not only as a frustrated <a href="art"><b>artist</b></a>, but as a frustrated: <a href="#philosophy"><b>philosopher</b></a>, <a href="#maths"><b>mathematician</b></a> and <a href="#film"><b>screenwriter</b></a>. The truth is he dabbles in quite a handful of different activities in his free time.</p>
 
-      <i><p>(Which of course is just a rather wordy and pretencious way of saying: "He has different hobbies and interests". Then again being wordy and pretencious is part of the whole "ooh so misterious" vibe he's trying to achieve with the design of this Website, so yeah whatevs)</i>
+      <i><p>(Which of course is just a rather wordy and pretentious way of saying: "He has different hobbies and interests". Then again being wordy and pretentious is part of the whole "ooh so mysterious" vibe he's trying to achieve with the design of this Website, so yeah whatever) </p></i>
 
 
-      <p id="blabla" class="w3-hide">More recently he embarked on the quest of creating this very blog. He intends to update it on a somewhat regular basis, to share some of his thoughts, the projects he's working on and other <i>pseudorandom</i> things he finds interesting. Hopefully those updates won't require him to write everything in third person all the time though. Because right now he feels it's just a matter of time before he starts making <s>more</s> gramatical erros. This style of writing is very counterintuitive, like for example right now he has no idea how he is supposed to finish this paragraph? Or is it a sentence? See?
+      <p id="blabla" class="w3-hide">More recently he embarked on the quest of creating this very blog. He intends to update it on a somewhat regular basis, to share some of his thoughts, the projects he's working on and other <em>pseudo-random</em> things he finds interesting. Hopefully those updates won't require him to write everything in third person all the time though. Because right now he feels it's just a matter of time before he starts making <s>more</s> grammatical errors. This style of writing is very counter intuitive, like for example right now he has no idea how he is supposed to finish this paragraph? Or is it a sentence? See? 
       <br><br>He clearly has no idea of what he's doing. Well to be fair he kinda does but, he is by no means an expert. <strike> I guess</strike> that's the whole point of this blog, having access to the mind of a dude who is perhaps a bit of a <i>Johannes Factotum</i> but whose insights might just be what someone out there is looking for (even if it's for laughs or mere entertainment purposes) :)</p>
-      <a id="kekest" href="feed" class="w3-button w3-block w3-grey w3-center align" style="float:center">Go to Feed</a>
-     <button id="myButton" onclick="showParagraph()" class="w3-bar-item w3-button w3-dark-grey">More</button>
+     <button id="myButton" onclick="showParagraph()" class="w3-bar-item w3-button w3-grey w3-block">More</button>
     </div>
 
 </div>
