--- a/index.html
+++ b/index.html
@@ -1,245 +1,15 @@
 <!DOCTYPE html>
 <html>
-<title>CHISCO</title>
+<title>C H I S C O</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <link rel="stylesheet" href="assets/css/main.css">
-<style>
-body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif;}
-body, html {
-    height: 100%;
-    color: #000;
-    line-height: 1.7;
-}
-.center {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  width: 100vw;
-  height: 100vh;
-  background-color: black;
-  background-image: url(background1.gif);
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
-}
-
-.other__text {
-  margin: auto;
-  font-family: 'Montserrat', sans-serif;
-  font-size: 100px;
-  text-transform: uppercase;
-}
-
-.center__text {
-  margin: auto;
-  font-family: 'Montserrat', sans-serif;
-  font-size: 120px;
-  text-transform: uppercase;
-}
-
-a {
-  color: inherit;
-  text-decoration: inherit;
-}
-
-.glitch {
-  position: relative;
-  color: white;
-  mix-blend-mode: lighten;
-}
-.glitch:before, .glitch:after {
-  content: attr(data-text);
-  position: absolute;
-  top: 0;
-  width: 100%;
-  background: black;
-  clip: rect(0, 0, 0, 0);
-}
-.glitch:before {
-  left: -1px;
-  text-shadow: 1px 0 rgba(255, 200, 200, 0.7);
-}
-.glitch:after {
-  left: 1px;
-  text-shadow: -1px 0 rgba(255, 255, 255, 0.7);
-}
-.glitch:hover:before {
-  text-shadow: 4px 0 rgba(255, 200, 200, 200.7);
-  -webkit-animation: glitch-loop-1 1.8s infinite ease-in-out alternate-reverse;
-          animation: glitch-loop-1 1.8s infinite ease-in-out alternate-reverse;
-}
-.glitch:hover:after {
-  text-shadow: -5px 0 rgba(200, 200, 255, 0.7);
-  -webkit-animation: glitch-loop-2 0.8s infinite ease-in-out alternate-reverse;
-          animation: glitch-loop-2 0.8s infinite ease-in-out alternate-reverse;
-}
-
-@-webkit-keyframes glitch-loop-1 {
-  0% {
-    clip: rect(36px, 9999px, 9px, 0);
-  }
-  25% {
-    clip: rect(25px, 9999px, 99px, 0);
-  }
-  50% {
-    clip: rect(50px, 9999px, 102px, 0);
-  }
-  75% {
-    clip: rect(30px, 9999px, 92px, 0);
-  }
-  100% {
-    clip: rect(91px, 9999px, 98px, 0);
-  }
-}
-
-@keyframes glitch-loop-1 {
-  0% {
-    clip: rect(36px, 9999px, 9px, 0);
-  }
-  25% {
-    clip: rect(25px, 9999px, 99px, 0);
-  }
-  50% {
-    clip: rect(50px, 9999px, 102px, 0);
-  }
-  75% {
-    clip: rect(30px, 9999px, 92px, 0);
-  }
-  100% {
-    clip: rect(91px, 9999px, 98px, 0);
-  }
-}
-@-webkit-keyframes glitch-loop-2 {
-  0% {
-    top: -1px;
-    left: 1px;
-    clip: rect(65px, 9999px, 119px, 0);
-  }
-  25% {
-    top: -6px;
-    left: 4px;
-    clip: rect(79px, 9999px, 19px, 0);
-  }
-  50% {
-    top: -3px;
-    left: 2px;
-    clip: rect(68px, 9999px, 11px, 0);
-  }
-  75% {
-    top: 0px;
-    left: -4px;
-    clip: rect(95px, 9999px, 53px, 0);
-  }
-  100% {
-    top: -1px;
-    left: -1px;
-    clip: rect(31px, 9999px, 149px, 0);
-  }
-}
-@keyframes glitch-loop-2 {
-  0% {
-    top: -1px;
-    left: 1px;
-    clip: rect(65px, 9999px, 119px, 0);
-  }
-  25% {
-    top: -6px;
-    left: 4px;
-    clip: rect(79px, 9999px, 19px, 0);
-  }
-  50% {
-    top: -3px;
-    left: 2px;
-    clip: rect(68px, 9999px, 11px, 0);
-  }
-  75% {
-    top: 0px;
-    left: -4px;
-    clip: rect(95px, 9999px, 53px, 0);
-  }
-  100% {
-    top: -1px;
-    left: -1px;
-    clip: rect(31px, 9999px, 149px, 0);
-  }
-}
-
-/* Create a Parallax Effect */
-.bgimg-1, .bgimg-2, .bgimg-3 {
-    background-attachment: fixed;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-}
-
-/* First image (Logo. Full height) */
-.bgimg-1 {
-    background-image: url("background1.gif");
-    min-height: 100%;
-}
-
-/* Second image (Portfolio) */
-.bgimg-2 {
-    background-image: url("background4.gif");
-    min-height: 500px;
-}
-
-/* Third image (Contact) */
-.bgimg-3 {
-    background-image: url("/w3images/parallax3.jpg");
-    min-height: 400px;
-}
-
-.ptrt-1{ 
-
-}
-
-
-
-
-.w3-wide {letter-spacing: 10px;}
-.w3-hover-opacity {cursor: pointer;}
-
-/* Turn off parallax scrolling for tablets and phones */
-@media only screen and (max-device-width: 1024px) {
-    .bgimg-1, .bgimg-2, .bgimg-3 {
-        background-attachment: scroll;
-    }
-}
-/*body { 
-    background-size: 20px 20px;
-    background-image: linear-gradient(to right, grey 1px, transparent 1px), linear-gradient(to bottom, grey 1px, transparent 1px);
-}*/
-</style>
 <body>
 
-<!-- Navbar (sit on top) 
-<div class="w3-top">
-  <div class="w3-bar" id="myNavbar">
-    <a class="w3-bar-item w3-button w3-hover-black w3-hide-medium w3-hide-large w3-right" href="javascript:void(0);" onclick="toggleFunction()" title="Toggle Navigation Menu">
-      <i class="fa fa-bars"></i>
-    </a>
-    <a href="#home" class="w3-bar-item w3-button">HOME</a>
-    <a href="#about" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-user"></i> ABOUT</a>
-    <a href="#portfolio" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-th"></i> PORTFOLIO</a>
-    <a href="#contact" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-envelope"></i> CONTACT</a>
-    <a href="#" class="w3-bar-item w3-button w3-hide-small w3-right w3-hover-red">
-      <i class="fa fa-search"></i>
-    </a>
-  </div> -->
 
-  <!-- Navbar on small screens 
-  <div id="navDemo" class="w3-bar-block w3-white w3-hide w3-hide-large w3-hide-medium">
-    <a href="#about" class="w3-bar-item w3-button" onclick="toggleFunction()">ABOUT</a>
-    <a href="#portfolio" class="w3-bar-item w3-button" onclick="toggleFunction()">PORTFOLIO</a>
-    <a href="#contact" class="w3-bar-item w3-button" onclick="toggleFunction()">CONTACT</a>
-    <a href="#" class="w3-bar-item w3-button">SEARCH</a>
-  </div>
-</div>-->
 
 <!-- First Parallax Image with Logo Text -->
 <div class="bgimg-1 w3-display-container w3-opacity-min" id="home">
@@ -255,14 +25,14 @@ a {
   <h3 class="w3-center" id="about">CONCERNING CHISCO:</h3>
   <div class="w3-row">
     <div class="w3-col m6 w3-center w3-padding-large">
-      <img src="Portrait4.svg" class="w3-round w3-image  alt="Photo of Me" width="500" height="333">
+      <img src="assets/img/Portrait4.svg" class="w3-round w3-image  alt="Photo of Me" width="500" height="333">
       <p><b><i class="w3-margin-right"></i>The man in question</b></p>
       <div class="w3-show-inline-block">
         <div class="w3-bar w3-light-grey">
           <button id="myButton" onclick="showParagraph()" class="w3-bar-item w3-button w3-dark-grey">More</button>
           <a class="w3-bar-item w3-button" href="#career">Uni</a>
-          <button onclick="shmoke('Interes')" class="w3-button w3-bar-item w3-light-grey">Others &#9662;</button>
-            <div id="Interes" class="w3-hide">
+          <button onclick="shmoke('pag1')" class="w3-button w3-bar-item w3-light-grey">Others &#9662;</button>
+            <div id="pag1" class="w3-hide">
               <h6 class="w3-block w3-black w3-center-align">Interests</h6>  
               <a class="w3-button w3-block w3-light-grey w3-center-align" href="#culture">Culture</a>
               <a class="w3-button w3-block w3-center-align w3-light-grey" href="#philosophy">Philosophy</a>
@@ -284,52 +54,16 @@ a {
     <div class="w3-col m6 w3-hide-small w3-padding-large">
       <p>Chisco is a <a href="#career"><b>Computer Science; Games Engineering student</b></a>, a part-time <a href="#culture"><b>hipster</b></a>, <a href="#food"><b>home cook/pizza expert</b></a>, he has been described by some (mostly himself) not only as a frustrated <a href="art"><b>artist</b></a>, but as a frustrated: <a href="#philosophy"><b>philosopher</b></a>, <a href="#maths"><b>mathematician</b></a> and <a href="#film"><b>screenwriter</b></a>. The truth is he dabbles in quite a handful of different activities in his free time.</p>
 
-      <i><p>(Which of course is just a rather wordy and pretencious way of saying: "He has different hobbies and interests". Then again being wordy and pretencious is part of the whole "ooh so misterious" vibe he's trying to achieve with the design of this Website, so yeah whatevs)</i>
+      <i><p>(Which of course is just a rather wordy and pretentious way of saying: "He has different hobbies and interests". Then again being wordy and pretentious is part of the whole "ooh so mysterious" vibe he's trying to achieve with the design of this Website, so yeah whatever) </p></i>
 
 
-      <p id="blabla" class="w3-hide">More recently he embarked on the quest of creating this very blog. He intends to update it on a somewhat regular basis, to share some of his thoughts, the projects he's working on and other <i>pseudorandom</i> things he finds interesting. Hopefully those updates won't require him to write everything in third person all the time though. Because right now he feels it's just a matter of time before he starts making <s>more</s> gramatical erros. This style of writing is very counterintuitive, like for example right now he has no idea how he is supposed to finish this paragraph? Or is it a sentence? See?
+      <p id="blabla" class="w3-hide">More recently he embarked on the quest of creating this very blog. He intends to update it on a somewhat regular basis, to share some of his thoughts, the projects he's working on and other <em>pseudo-random</em> things he finds interesting. Hopefully those updates won't require him to write everything in third person all the time though. Because right now he feels it's just a matter of time before he starts making <s>more</s> grammatical errors. This style of writing is very counter intuitive, like for example right now he has no idea how he is supposed to finish this paragraph? Or is it a sentence? See? 
       <br><br>He clearly has no idea of what he's doing. Well to be fair he kinda does but, he is by no means an expert. <strike> I guess</strike> that's the whole point of this blog, having access to the mind of a dude who is perhaps a bit of a <i>Johannes Factotum</i> but whose insights might just be what someone out there is looking for (even if it's for laughs or mere entertainment purposes) :)</p>
-      <a id="kekest" href="feed" class="w3-button w3-block w3-grey w3-center align" style="float:center">Go to Feed</a>
-     <button id="myButton" onclick="showParagraph()" class="w3-bar-item w3-button w3-dark-grey">More</button>
+     <button id="myButton" onclick="showParagraph()" class="w3-bar-item w3-button w3-grey w3-block">More</button>
     </div>
 
 </div>
 
-
-
-<!--  <p class="w3-large w3-center w3-padding-16">Im really good at:</p>
-  <p class="w3-wide"><i class="fa fa-camera"></i>Photography</p>
-  <div class="w3-light-grey">
-    <div class="w3-container w3-padding-small w3-dark-grey w3-center" style="width:90%">90%</div>
-  </div>
-  <p class="w3-wide"><i class="fa fa-laptop"></i>Web Design</p>
-  <div class="w3-light-grey">
-    <div class="w3-container w3-padding-small w3-dark-grey w3-center" style="width:85%">85%</div>
-  </div>
-  <p class="w3-wide"><i class="fa fa-photo"></i>Photoshop</p>
-  <div class="w3-light-grey">
-    <div class="w3-container w3-padding-small w3-dark-grey w3-center" style="width:75%">75%</div>
-  </div>
-</div>
-
-<div class="w3-row w3-center w3-dark-grey w3-padding-16">
-  <div class="w3-quarter w3-section">
-    <span class="w3-xlarge">14+</span><br>
-    Partners
-  </div>
-  <div class="w3-quarter w3-section">
-    <span class="w3-xlarge">55+</span><br>
-    Projects Done
-  </div>
-  <div class="w3-quarter w3-section">
-    <span class="w3-xlarge">89+</span><br>
-    Happy Clients
-  </div>
-  <div class="w3-quarter w3-section">
-    <span class="w3-xlarge">150+</span><br>
-    Meetings
-  </div>
-</div>-->
 
 <!-- Second Parallax Image with Portfolio Text -->
 <div class="bgimg-2 w3-display-container w3-opacity-min">
@@ -344,16 +78,26 @@ a {
 
   <div class="w3-row">
     <div class="w3-col m6 w3-center w3-padding-large">
-      <img src="PortraitUni2.svg" class="w3-round w3-image  alt="Photo of Me" width="500" height="333">
+      <img src="assets/img/PortraitUni2.svg" class="w3-round w3-image  alt="Photo of Me" width="500" height="333">
       <p><b><i class="w3-margin-right"></i>A more recent portrait</b></p>
       <div class="w3-show-inline-block">
         <div class="w3-bar w3-light-grey">
-          <a href="#about" class="w3-bar-item w3-button">Chisco</a>
-          <a href="#career" class="w3-bar-item w3-button w3-dark-grey">Student</a>
-          <a href="#culture" class="w3-bar-item w3-button ">Culture</a>
-          <a href="#" class="w3-bar-item w3-button">Food</a>
+          <a href="#about" class="w3-bar-item w3-button">About</button>
+          <a class="w3-bar-item w3-button w3-dark-grey" href="#career">Uni</a>
+          <button onclick="shmoke('pag2')" class="w3-button w3-bar-item w3-light-grey">Others &#9662;</button>
+            <div id="pag2" class="w3-hide">
+              <h6 class="w3-block w3-black w3-center-align">Interests</h6>  
+              <a class="w3-button w3-block w3-light-grey w3-center-align" href="#culture">Culture</a>
+              <a class="w3-button w3-block w3-center-align w3-light-grey" href="#philosophy">Philosophy</a>
+              <a class="w3-center-align w3-button w3-block w3-light-grey" href="#maths">Maths &amp; Science</a>
+              <h6 class="w3-block w3-black w3-center-align">Hobbies</h6>
+              <a class="w3-button w3-block w3-center-align w3-light-grey" href="#food">Food</a>
+              <a class="w3-button w3-block w3-center-align w3-light-grey" href="#film">Screenwriting</a>
+            </div>
+
         </div>
-      </div>      
+
+      </div>     
       <br><br>
     </div>
     <br>
@@ -387,12 +131,12 @@ a {
 
   <div class="w3-row">
     <div class="w3-col m6 w3-center w3-padding-large">
-      <img src="Hipster3.svg" class="w3-round w3-image  alt="Photo of Me" width="500" height="333">
+      <img src="assets/img/Hipster3.svg" class="w3-round w3-image  alt="Photo of Me" width="500" height="333">
       <p><b><i class="w3-margin-right"></i>funny caption</b></p>
       <div class="w3-show-inline-block">
         <div class="w3-bar w3-light-grey">
-          <a class="w3-bar-item w3-button w3-light-grey" href="#about">Chisco</a>
-          <a class="w3-bar-item w3-button" href="#career">Career</a>
+          <a class="w3-bar-item w3-button w3-light-grey" href="#about">About</a>
+          <a class="w3-bar-item w3-button" href="#career">Uni</a>
           <button onclick="shmoke('Culture')" class="w3-button w3-bar-item w3-dark-grey">Culture &#9662;</button>
             <div id="Culture" class="w3-hide">
               <h6 class="w3-block w3-black w3-center-align">
