--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
 
 <!-- Second Parallax Image with Portfolio Text -->
-<div class="bgimg-2 w3-display-container w3-opacity-min">
+<div class="bgimg-3 w3-display-container w3-opacity-min">
   <div class="w3-display-middle">
     <h3 class="other__text glitch is-glitching" data-text="STUDIES">UNIVERSITY</span>
   </div>
@@ -105,7 +105,7 @@
     <!-- Hide this text on small devices -->
     <div class="w3-col m6 w3-hide-small w3-padding-large w3-center-align" >
       <div> 
-      <p>Chisco is a pursuing a BSc in Computer Science; Games Engineering at the Technical University of Munich (Technische Universität München)<br> He is passionate about his studies but he also understands the challanges they can represent.<br>For this reason, Chisco often spends time searching for alternative learning material online for specific subjects, doing research on concepts that interest him and developing little projects he deems useful.
+      <p>Chisco is a pursuing a BSc in Computer Science; Games Engineering at the Technical University of Munich (Technische Universität München)<br> He is passionate about his studies but he also understands the challenges they can represent.<br>For this reason, Chisco often spends time searching for alternative learning material online for specific subjects, doing research on concepts that interest him and developing little projects he deems useful.
       </p>
       </div>
       <h4 style="text-align:center">Here you'll find</h4>
