--- a/feed/index.html
+++ b/feed/index.html
@@ -12,8 +12,8 @@
 <body>
 
 <div class="bgimg-1 w3-display-container w3-opacity-min">
-  <div class="w3-display-middle w3-jumbo w3-align-center" style="text-align:center">
-    <p><h2>Phone Status:</h2>
+  <div class="w3-display-middle w3-jumbo w3-align-center" style="text-align:center; color:white;">
+    <p><h2><strong>Phone Status:</strong></h2>
     <h4 class="center__text glitch is-glitching" data-text="heh">R. I. P.</h4>  
     </p>
   </div>
