--- a/feed/index.html
+++ b/feed/index.html
@@ -15,7 +15,7 @@
   <div class="w3-display-middle w3-jumbo w3-align-center" style="text-align:center; color:white;">
     <p><h2><strong>Phone Status:</strong></h2>
     <h3 class="center__text glitch is-glitching" data-text="heh">R. I. P.</h3>  
-   <button class=" w3-circle w3-button w3-large w3-dark-grey" onclick="document.getElementById('context').style.display='block'">?</button></p>
+   <button class=" w3-circle w3-button w3-large w3-grey" onclick="document.getElementById('context').style.display='block'">?</button></p>
   </div>
   <!--<div class="w3-display-bottomleft w3-opacity-min w3-align-center">
     <p style="color:white"><strong>Some context:</strong><br><em><b><a href="../">Chisco</a></b>'s phones live fast and die young.   Most of them have gone MIA, others have died from natural causes, and more than a few from supernatural causes (puddles and other small bodies of water have the tendency of materializing around his phone when he's not paying attention). Anyway this has lead to 80% of his posts on facebook being about the current status of his phone, and that is just annoying and not very efficient.   So yeah that's what this is for! A place to check chisco's phoneatioship status in "real time" heh xdd. . . fml</em></p>
