--- a/feed/index.html
+++ b/feed/index.html
@@ -24,7 +24,7 @@
 </div>
 <div id="context" class="w3-modal">
   <div class="w3-modal-content w3-animate-zoom">
-    <div class="w3-container w3-grey w3-opacity-mid w3-display-container">
+    <div class="w3-container w3-dark-grey w3-opacity-mid w3-display-container">
       <span onclick="document.getElementById('context').style.display='none'" class="w3-button w3-display-topright w3-large">x</span>
       <p style="color:white;text-align:center"><strong>Some context:</strong><br><em><b><a href="../">Chisco</a></b>'s phones live fast and die young.   Most of them have gone MIA, some have died from natural causes, and the rest from supernatural causes (puddles and other small bodies of water have the tendency of materializing around chisco's phone when he's not paying attention). Anyway this has lead to 80% of his posts on facebook being about the current status of his phone, and that is just annoying and not very efficient.   So yeah that's what this is for! A place to check chisco's phoneatioship status in "real time" heh xdd. . . fml</em></p>
     </div>
