--- a/feed/index.html
+++ b/feed/index.html
@@ -12,21 +12,26 @@
 <body>
 
 <div class="muelto w3-display-container w3-opacity-min">
-  <div class="w3-display-middle w3-jumbo w3-align-center" style="text-align:center; color:white;">
+  <div class="w3-display-middle w3-hide-small w3-jumbo w3-align-center" style="text-align:center; color:white;">
     <p><h2><strong>Phone Status:</strong></h2>
     <h3 class="center__text glitch is-glitching" data-text="heh">R. I. P.</h3>  
-   <button class=" w3-circle w3-button w3-large w3-grey" onclick="document.getElementById('context').style.display='block'">?</button></p>
+   <button class=" w3-circle w3-button w3-large w3-white" onclick="document.getElementById('context').style.display='block'"><b>?</b></button></p>
   </div>
-  <!--<div class="w3-display-bottomleft w3-opacity-min w3-align-center">
-    <p style="color:white"><strong>Some context:</strong><br><em><b><a href="../">Chisco</a></b>'s phones live fast and die young.   Most of them have gone MIA, others have died from natural causes, and more than a few from supernatural causes (puddles and other small bodies of water have the tendency of materializing around his phone when he's not paying attention). Anyway this has lead to 80% of his posts on facebook being about the current status of his phone, and that is just annoying and not very efficient.   So yeah that's what this is for! A place to check chisco's phoneatioship status in "real time" heh xdd. . . fml</em></p>
-  -->
+ 
+ <div class="w3-display-middle w3-hide-large w3-hide-medium w3-jumbo w3-align-center" style="text-align:center; color:white;">
+    <p><h3><strong>Phone Status:</strong></h3>
+    <h2>R. I. P.</h2>  
+   <button class=" w3-circle w3-button w3-large w3-white" onclick="document.getElementById('context').style.display='block'"><b>?</b></button></p>
+  </div>
+
+
   </div>
 </div>
 <div id="context" class="w3-modal">
   <div class="w3-modal-content w3-animate-zoom">
     <div class="w3-container w3-dark-grey w3-opacity-mid w3-display-container">
       <span onclick="document.getElementById('context').style.display='none'" class="w3-button w3-display-topright w3-large">x</span>
-      <p style="color:white;text-align:center"><strong>Some context:</strong><br><em><b><a href="../">Chisco</a></b>'s phones live fast and die young.   Most of them have gone MIA, some have died from natural causes, and the rest from supernatural causes (puddles and other small bodies of water have the tendency of materializing around chisco's phone when he's not paying attention). Anyway this has lead to 80% of his posts on facebook being about the current status of his phone, and that is just annoying and not very efficient.   So yeah that's what this is for! A place to check chisco's phoneatioship status in "real time" heh xdd. . . fml</em></p>
+      <p style="color:white;text-align:center"><strong>Some context:</strong><br><b><a href="../">Chisco</a></b><em>'s phones live fast and die young.   Most of them have gone MIA, some have died from natural causes, and the rest from supernatural causes (puddles and other small bodies of water have the tendency of materializing around chisco's phone when he's not paying attention). Anyway this has lead to 80% of his posts on facebook being about the current status of his phone, which is both annoying and far from efficient.   So yeah that's what this is for! The go-to website for those who want to know chisco's phoneatioship status and be updated in """"real time"""" heh xxdd. . . fml</em></p>
     </div>
   </div>
 </div>
