--- a/index.html
+++ b/index.html
@@ -16,9 +16,15 @@
 
 <!-- First Parallax Image with Logo Text -->
 <div class="bgimg-1 w3-display-container w3-opacity-min" id="home">
-  <div class="w3-display-middle" style="white-space:nowrap;">
+  <div class="w3-display-middle w3-hide-small" style="white-space:nowrap;">
       <div class="center">
         <h4 class="center__text glitch is-glitching" data-text="May 1st 2017">Coming Soon</h4>  
+        <br><br>  
+     </div>
+  </div>
+  <div class="w3-display-middle w3-hide-small w3-jumbo w3-align-center" style="white-space:nowrap;text-align:center; color:white;">
+        <h3>Coming Soon</h3>
+        <h4>01/05/2017</h4>  
         <br><br>  
      </div>
   </div>
