--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
         <br><br>  
      </div>
   </div>
-  <div class="w3-display-middle w3-hide-small w3-jumbo w3-align-center" style="white-space:nowrap;text-align:center; color:white;">
-        <h3>Coming Soon</h3>
-        <h4>01/05/2017</h4>  
+  <div class="w3-display-middle w3-hide w3-jumbo w3-align-center" style="white-space:nowrap;text-align:center; color:white;">
+        <h1>Coming Soon</h1>
+        <h2>01/05/2017</h2>  
         <br><br>  
      </div>
   </div>
