--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
         <br><br>  
      </div>
   </div>
-  <div class="w3-display-middle w3-hide-large w3-hide-medium w3-jumbo w3-align-center" style="white-space:nowrap;text-align:center; color:white;">
-        <h1>Coming Soon</h1>
-        <h2>01/05/2017</h2>  
+  <div class="w3-display-middle w3-center w3-padding-large w3-hide-large w3-hide-medium w3-jumbo w3-align-center" style="white-space:nowrap;text-align:center; color:white;">
+        <h1><strong>COMING SOON</strong></h1>
+        <h2><strong>01/05/2017</strong></h2>  
         <br><br>  
      </div>
   </div>
