--- a/phone/index.html
+++ b/phone/index.html
@@ -21,7 +21,7 @@
  <div class="w3-display-middle w3-hide-large w3-hide-medium w3-jumbo w3-align-center" style="text-align:center; color:white;">
     <p><h3><strong>Phone Status:</strong></h3>
     <h1><strong>R. I. P.</strong></h1>  
-   <button class=" w3-circle w3-button w3-large w3-white" onclick="document.getElementById('context').style.display='block'"><b>?</b></button></p>
+   <button class=" w3-circle w3-button w3-medium w3-white" onclick="document.getElementById('context').style.display='block'"><b>?</b></button></p>
   </div>
 
 
