--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 
 <!-- First Parallax Image with Logo Text -->
-<div class="bgimg-1 w3-display-container w3-opacity-min" id="home">
+<div class="muelto w3-display-container w3-opacity-min" id="home">
   <div class="w3-display-middle w3-hide-small" style="white-space:nowrap;">
       <div class="center">
         <h4 class="center__text glitch is-glitching" data-text="May 1st 2017">Coming Soon</h4>  
