--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
 
 
 <!-- First Parallax Image with Logo Text -->
-<div class="muelto w3-display-container w3-opacity-min" id="home">
+<div class="bgimg-1 w3-display-container w3-opacity-min" id="home">
   <div class="w3-display-middle w3-hide-small" style="white-space:nowrap;">
       <div class="center">
         <h4 class="center__text glitch is-glitching" data-text="May 1st 2017">Coming Soon</h4>  
         <br><br>  
      </div>
   </div>
-  <div class="w3-display-middle w3-center w3-padding-large w3-wide w3-hide-large w3-hide-medium w3-jumbo w3-align-center" style="white-space:nowrap;text-align:center; color:white;">
+  <div class="w3-display-middle w3-center w3-padding-large w3-wid w3-hide-large w3-hide-medium w3-jumbo w3-align-center" style="white-space:nowrap;text-align:center; color:white;">
         <h1><strong>COMING SOON</strong></h1>
         <h2><strong>01/05/2017</strong></h2>  
         <br><br>  
