--- a/phone/index.html
+++ b/phone/index.html
@@ -13,12 +13,12 @@
 
 <div class="muelto w3-display-container w3-opacity-min">
   <div class="w3-display-middle w3-hide-small w3-jumbo w3-align-center" style="text-align:center; color:white;">
+    <div class="center2">
     <p><h2><strong>Phone Status:</strong></h2>
-    <span class="center2">
-    <h3 class="center__text glitch is-glitching" data-text="heh">R. I. P.</h3>
-    </span>  
+    <h3 class="center__text glitch is-glitching" data-text="heh">R. I. P.</h3>  
    <button class=" w3-circle w3-button w3-large w3-white" onclick="document.getElementById('context').style.display='block'"><b>?</b></button></p>
   </div>
+</div>
  
  <div class="w3-display-middle w3-hide-large w3-hide-medium w3-jumbo w3-align-center" style="text-align:center; color:white;">
     <p><h3><strong>Phone Status:</strong></h3>
