--- a/phone/index.html
+++ b/phone/index.html
@@ -20,11 +20,11 @@
   </div>
   </div>
 </div>
- 
+
  <div class="w3-display-middle w3-hide-large w3-hide-medium w3-jumbo w3-align-center" style="text-align:center; color:white;">
     <p><h3><strong>Phone Status:</strong></h3>
     <h1><strong>R. I. P.</strong></h1>  
-   <button class=" w3-circle w3-button w3-medium w3-white" onclick="document.getElementById('context').style.display='block'"><b>?</b></button></p>
+   <button class=" w3-circle w3-button w3-small w3-white" onclick="document.getElementById('context').style.display='block'"><b>?</b></button></p>
   </div>
 
 
@@ -34,7 +34,7 @@
   <div class="w3-modal-content w3-animate-zoom">
     <div class="w3-container w3-dark-grey w3-opacity-mid w3-display-container">
       <span onclick="document.getElementById('context').style.display='none'" class="w3-button w3-display-topright w3-large">x</span>
-      <p style="color:white;text-align:center"><strong>Some context:</strong><br><b><a href="../">Chisco</a></b><em>'s phones live fast and die young.   Most of them have gone MIA, some have died from natural causes, and the rest from supernatural causes (puddles and other small bodies of water have the tendency of materializing around chisco's phone when he's not paying attention). Anyway this has lead to 80% of his posts on facebook being about the current status of his phone, which is both annoying and far from efficient.   So yeah that's what this is for! The go-to website for those who want to know chisco's phoneatioship status and be updated in """"real time"""" heh xxdd. . . fml</em></p>
+      <p style="color:white;text-align:center"><strong>Some context:</strong><br><b><a href="../">Chisco</a></b><em>'s phones live fast and die young.   Most of them have gone MIA, some have died from natural causes, and the rest of them from supernatural causes really (For some reason puddles and other small bodies of water have the tendency of materializing around chisco's phone when he's not paying attention). Anyway this has lead to 80% of his posts on facebook being about the current status of his phone, which is both annoying and far from efficient.   So yeah that's what this is for! The go-to website for those who want to know chisco's phoneatioship status and be updated in """"real time"""" heh xxdd. . . fml</em></p>
     </div>
   </div>
 </div>
