--- a/phone/index.html
+++ b/phone/index.html
@@ -20,7 +20,7 @@
 </div>
 
  <div class="w3-display-middle w3-hide-large w3-hide-medium w3-jumbo w3-align-center" style="text-align:center; color:white;">
-    <p><h3><strong>Chisco'stPhone<br>Current Status:</strong></h3>
+    <p><h3><strong>Chisco's Phone<br>current status</strong></h3>
     <h1><strong>R. I. P.</strong></h1>  
    <button class=" w3-circle w3-button w3-small w3-white" onclick="document.getElementById('context').style.display='block'"><b>?</b></button></p>
   </div>
