--- a/phone/index.html
+++ b/phone/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
-<title>Chisco's Phone: R.I.P. </title>
+<title>Is Chisco's Phone Dead?</title>
 <meta charset="UTF-8">
-  <meta name="description" content="the quickest way to know if chisco has his phone">
+  <meta name="description" content="Is it dead? Lost? Has he just forgotten to charge it again? What is up with the ignohs? Here you will see what is going on.">
   <meta name="author" content="therealchisco">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -12,32 +12,52 @@
 <body>
 
 <div class="muelto w3-display-container w3-opacity-min">
+
   <div class="w3-display-middle w3-hide-small w3-jumbo w3-align-center" style="text-align:center; color:white;white-space:nowrap">
-    <p><h2><strong>Chisco's Phone<br> current status:</strong></h2>
-    <h3 class="center__text glitch is-glitching" data-text="heh">R. I. P.</h3>  
-   <button class=" w3-circle w3-button w3-large w3-white" onclick="document.getElementById('context').style.display='block'"><b>?</b></button></p>
+    <p>
+    <h2>
+    <strong>Chisco's Phone<br>
+    current status</strong>
+    </h2>
+    <h3 class="center__text glitch is-glitching" data-text="h e h">
+    R. I. P.
+    </h3>
+    <button class=" w3-circle w3-button w3-large w3-white" onclick="document.getElementById('context').style.display='block'">
+    <b>?</b>
+    </button>
+    </p>
   </div>
 </div>
 
  <div class="w3-display-middle w3-hide-large w3-hide-medium w3-jumbo w3-align-center" style="text-align:center; color:white;">
-    <p><h3><strong>Chisco's Phone<br>current status</strong></h3>
-    <h1><strong>R. I. P.</strong></h1>  
-   <button class=" w3-circle w3-button w3-small w3-white" onclick="document.getElementById('context').style.display='block'"><b>?</b></button></p>
+    <p>
+    <h3>
+    <strong>Chisco's Phone<br>current status</strong>
+    </h3>
+    <h1>
+    <strong>R. I. P.</strong>
+    </h1>
+    <button class=" w3-circle w3-button w3-small w3-white" onclick="document.getElementById('context').style.display='block'"><b>?</b>
+    </button>    
+    </p>
   </div>
 
-
-  </div>
-</div>
 <div id="context" class="w3-modal">
+
   <div class="w3-modal-content w3-animate-zoom">
+
     <div class="w3-container w3-dark-grey w3-opacity-mid w3-display-container">
+
       <span onclick="document.getElementById('context').style.display='none'" class="w3-button w3-display-topright w3-large">x</span>
-      <p style="color:white;text-align:center"><strong>Some context:</strong><br><b><a href="../">Chisco</a></b><em>'s phones live fast and die young.   Most of them have gone MIA, some have died from natural causes, and the rest of them from supernatural causes really (For some reason puddles and other small bodies of water have the tendency of materializing around chisco's phone whenever he's not paying attention). Anyway this has lead to 80% of his posts on facebook being about the current status of his phone, which is both annoying and far from efficient.   So yeah that's what this is for! The go-to website for those who want to know chisco's phoneatioship status and be updated in """"real time"""" heh xxdd. . . fml</em></p>
+
+      <p style="color:white;text-align:center"><strong>Some context:</strong><br><b><a href="../">Chisco</a></b><em>'s phones live fast and die young.   Most of them have gone MIA, some have died from natural causes, and the rest of them died from what can only be described as supernatural causes <em>(For some reason puddles and other small bodies of water have the tendency of materializing around chisco's phone whenever he's not paying attention)</em>. <br>Anyway since these occurrences are fairly frequent and posting "i lost/found my phone" on facebook became a bit of an annoying meme, we came up with this. The go-to website for those who want to know chisco's phoneatioship status and get updates in """"real time"""" heh xxdd. . . fml</em></p>
+    
     </div>
+  
   </div>
+
 </div>
-
-
 
 </body>
+
 </html>
