--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <title>C H I S C O</title>
 <meta charset="UTF-8">
-  <meta name="description" content="A blog that tries to answer the question: Who is the real chisco?">
+  <meta name="description" content="A blog that tries to answer the question: Who is chisco?">
   <meta name="keywords" content="Blog,Chisco,therealchisco,Pegando,Porte,y,la,Vara">
   <meta name="author" content="therealchisco">
 <meta name="viewport" content="width=device-width, initial-scale=1">
