--- a/phone/index.html
+++ b/phone/index.html
@@ -50,7 +50,7 @@
 
       <span onclick="document.getElementById('context').style.display='none'" class="w3-button w3-display-topright w3-large">x</span>
 
-      <p style="color:white;text-align:center"><strong>Some context:</strong><br><b><a href="../">Chisco</a></b><em>'s phones live fast and die young.   Most of them have gone MIA, some have died from natural causes, and the rest of them have died in what can only be described as supernatural events <em>(For some reason puddles and other small bodies of water have the tendency of materializing around chisco's phone whenever he's not paying attention)</em>. Anyway since these occurrences are fairly frequent and posting "i lost/found my phone" on facebook became a bit of an annoying meme, he came up with this. The go-to website for those who want to know chisco's phoneatioship status and get updates in """"real time"""" heh xxdd. . . fml</em></p>
+      <p style="color:white;text-align:center"><strong>Some context:</strong><br><b><a href="../">Chisco</a></b><em>'s phones live fast and die young.   Most of them have gone MIA, some have died from natural causes, and the rest of them have suffered 'supernatural events' <em>(For some reason puddles and other small bodies of water have the tendency of materializing around chisco's phone whenever he's not paying attention)</em>. Anyway since these occurrences are fairly frequent and posting "i lost/found my phone" on facebook became a bit of an annoying meme, he came up with this. The go-to website for those who want to know chisco's phoneatioship status and get updates in """"real time"""" heh xxdd. . . fml</em></p>
     
     </div>
   
