--- a/phone/index.html
+++ b/phone/index.html
@@ -51,8 +51,8 @@
       <span onclick="document.getElementById('context').style.display='none'" class="w3-button w3-display-topright w3-large">x</span>
 
       <p style="color:white;text-align:center"><br><br>
-      <strong> Welcome to the go-to website for those who want to know chisco's phoneatioship status and get updates in """"real time"""" heh xxdd. . . fml</strong><br><br>
-      <strong><em>Some context:</em></strong><br><b><a href="../">Chisco</a></b>'s phones live fast and die young.   Most of them have gone MIA, some have died from natural causes, and the rest of them have been involved in supernatural accindets <em>(For some reason puddles and other small bodies of water have the tendency of materializing around chisco's phone whenever he's not paying attention)</em>.<br> These occurrences are fairly frequent so it is  necessary to find a way to let people know whether or not chisco has a phone at the moment, but posting "i lost/found my phone" on facebook has become a stale meme at best. <br>You can think of this as exactly that: A new, fresh, more functional spin on an old recurring meme.</p>
+      <strong> Welcome to the go-to website for those who want to know chisco's phoneatioship status and get updates in <mark style="color:green">>real time</mark> heh xxdd. . . fml</strong><br><br>
+      <strong><em>Some context:</em></strong><br><b><a href="../">Chisco</a></b>'s phones live fast and die young.   Most of them have gone MIA, some have died from natural causes, and the rest of them have been involved in supernatural accidents <em>(For some reason puddles and other small bodies of water have the tendency of materializing around chisco's phone whenever he's not paying attention)</em>.<br> These occurrences are fairly frequent so it is  necessary to find a way to let people know whether or not chisco has a phone at the moment, but posting "i lost/found my phone" on facebook has become a stale meme at best. <br>You can think of this as exactly that: A new, fresh, more functional spin on an old recurring meme.</p>
     
     </div>
   
