--- a/phone/index.html
+++ b/phone/index.html
@@ -2,7 +2,7 @@
 <html>
 <title>Is Chisco's Phone Dead?</title>
 <meta charset="UTF-8">
-  <meta name="description" content="Is it dead? Lost? Has he just forgotten to charge it again? What is up with the ignohs? Here you will see what is going on.">
+  <meta name="description" content="Is it dead? Lost? Has he just forgotten to charge it again? What is up with the ignohs? Find out what's going on.">
   <meta name="author" content="therealchisco">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
