--- a/phone/index.html
+++ b/phone/index.html
@@ -20,7 +20,7 @@
     current status</strong>
     </h2>
     <h3 class="center__text glitch is-glitching" data-text="h e h">
-    Safe and Sound :)
+    Safe & Sound :)
     </h3>
     <button class=" w3-circle w3-button w3-large w3-white" onclick="document.getElementById('context').style.display='block'">
     <b>?</b>
@@ -35,7 +35,7 @@
     <strong>Chisco's Phone<br>current status</strong>
     </h3>
     <h1>
-    <strong>Safe and Sound :)</strong>
+    <strong>Safe & Sound :)</strong>
     </h1>
     <button class=" w3-circle w3-button w3-small w3-white" onclick="document.getElementById('context').style.display='block'"><b>?</b>
     </button>    
