--- a/phone/index.html
+++ b/phone/index.html
@@ -52,7 +52,7 @@
 
       <p style="color:white;text-align:center"><br>
       <strong> Welcome to the go-to website for those who want to know chisco's phoneatioship status and get updates in <mark style="color:#789922;background:none">>real time</mark> heh xxdd. . . fml</strong><br><br>
-      <strong><em>Some context:</em></strong><br><b><a href="../">Chisco</a></b>'s phones live fast and die young.   Most of them have gone MIA, some have died from natural causes, and the rest of them have been involved in supernatural accidents <em>(For some reason puddles and other small bodies of water have the tendency of materializing around his phone whenever he's not paying attention)</em>. Creating this dedicated space semmed reasonable because facebook was proably going to start  </p>
+      <strong><em>Some context:</em></strong><br><b><a href="../">Chisco</a></b>'s phones live fast and die young.   Most of them have gone MIA, some have died from natural causes, and the rest of them have been involved in supernatural accidents <em>(For some reason puddles and other small bodies of water have the tendency of materializing around his phone whenever he's not paying attention)</em>. Creating this dedicated space semmed reasonable because posting "dudes i lost my phone xdddd" on facebook wasn't even that funny the first time. </p>
     
     </div>
   
