--- a/phone/index.html
+++ b/phone/index.html
@@ -11,7 +11,7 @@
 <link rel="stylesheet" href="../assets/css/main.css">
 <body>
 
-<div class="muelto w3-display-container w3-opacity-min">
+<div class="center2 w3-display-container w3-opacity-min">
 
   <div class="w3-display-middle w3-hide-small w3-jumbo w3-align-center" style="text-align:center; color:white;white-space:nowrap">
     <p>
